--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- for icons -->
     <script src="https://kit.fontawesome.com/38a4c6b5fb.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="Images/Logo.png" type="image/icon type">
+    <link rel="icon" href="Logo.png" type="image/icon type">
 
 </head>
 <body>
 
     <div class="container">
         <div class="navbar">
-            <img src="images/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <nav>
                 <ul id="menuList">
                     <li><a href="Home">Home</a></li>
@@ -44,8 +44,8 @@
             </div>
 
             <div class="col2">
-                <img class="man" src="images/3dMan.png" alt="image not found">
-                <img class="lap" src="images/3dLap.png" alt="image not found">
+                <img class="man" src="3dMan.png" alt="image not found">
+                <img class="lap" src="3dLap.png" alt="image not found">
             </div>
 
         </div>
